--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="https://www.tiktok.com/@emeryj" class="social-icon bg-black/70 hover:bg-black/90 p-3 rounded-full">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"><path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/></svg>
       </a>
-      <a href="https://www.youtube.com/@emeryj" class="social-icon bg-red-600/70 hover:bg-red-700/90 p-3 rounded-full">
+      <a href="https://www.youtube.com/" class="social-icon bg-red-600/70 hover:bg-red-700/90 p-3 rounded-full">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="24" height="24">
           <path d="M23.498 6.186a2.996 2.996 0 0 0-2.116-2.116C19.2 3.75 12 3.75 12 3.75s-7.2 0-9.382.32A2.996 2.996 0 0 0 .502 6.186 31.697 31.697 0 0 0 0 12a31.697 31.697 0 0 0 .502 5.814 2.996 2.996 0 0 0 2.116 2.116C4.8 20.25 12 20.25 12 20.25s7.2 0 9.382-.32a2.996 2.996 0 0 0 2.116-2.116A31.697 31.697 0 0 0 24 12a31.697 31.697 0 0 0-.502-5.814zM9.545 15.568V8.432l6.182 3.568-6.182 3.568z"/>
         </svg>
@@ -60,7 +60,7 @@
         <h4 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">Current Phase</h4>
         <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-8 items-center text-center">
           <p class="text-base sm:text-lg md:text-xl">Phase: <span class="font-bold red-text">Cut</span></p>
-          <p class="text-base sm:text-lg md:text-xl">Starting Weight: <span class="font-bold red-text">250 lbs</span></p>
+          <p class="text-base sm:text-lg md:text-xl">Starting Weight: <span class="font-bold red-text">245 lbs</span></p>
           <p class="text-base sm:text-lg md:text-xl">Starting Body Fat: <span class="font-bold red-text">17%</span></p>
         </div>
       </div>
