--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </svg>
       </a>
     </div>
+
+    <!-- Scroll Down Indicator -->
+    <div id="scroll-down" class="fixed bottom-4 left-1/2 transform -translate-x-1/2 flex flex-col items-center animate-bounce z-50 transition-opacity duration-500">
+      <span class="text-sm text-indigo-300 mb-1">Scroll Down</span>
+      <svg class="w-6 h-6 text-indigo-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+      </svg>
+    </div>
+
   </section>
 
   <!-- Tabs Section -->
@@ -195,10 +204,8 @@ tabs.forEach(tab => {
 let showName = "TBA"; 
 let showLocation = "TBA"; 
 let showDate = new Date("").getTime();
-
 document.getElementById("show-name").textContent = showName;
 document.getElementById("show-location").textContent = showLocation;
-
 function updateCountdown() {
   if (!showDate) {
     document.getElementById("days").textContent = "- -";
@@ -221,6 +228,16 @@ function updateCountdown() {
 }
 setInterval(updateCountdown, 1000);
 updateCountdown();
+
+// Scroll down fade
+const scrollDown = document.getElementById('scroll-down');
+window.addEventListener('scroll', () => {
+  if(window.scrollY > 50) {
+    scrollDown.style.opacity = '0';
+  } else {
+    scrollDown.style.opacity = '1';
+  }
+});
 </script>
 
 </body>
