--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
     </div>
 
     <!-- Scroll Down Indicator -->
-    <div id="scroll-down" class="fixed bottom-4 left-1/2 transform -translate-x-1/2 flex flex-col items-center animate-bounce z-50 transition-opacity duration-500">
-      <span class="text-sm text-indigo-300 mb-1">Scroll Down</span>
-      <svg class="w-6 h-6 text-indigo-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
-      </svg>
-    </div>
+    <div id="scroll-down" style="left: 51%; transform: translateX(-50%);" class="fixed bottom-4 flex flex-col items-center ...">
+  <span class="text-sm text-indigo-300 mb-1">Scroll Down</span>
+  <svg class="w-6 h-6 text-indigo-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+  </svg>
+</div>
+
 
   </section>
 
