--- a/onlyfans/Busted.html
+++ b/onlyfans/Busted.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OnlyFans Meme</title>
+<title>Emeryjharris.com /onlyfans</title>
 <style>
+  /* This is the /onlyfans subpage of emeryjharris.com */
   html, body {
     margin: 0;
     padding: 0;
@@ -22,6 +23,7 @@
 </style>
 </head>
 <body>
+  <!-- /onlyfans subpage of emeryjharris.com -->
   <img src="chevy.jpeg" alt="OnlyFans Meme">
 </body>
 </html>
