--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
       <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">Sponsors</h3>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <div class="bg-slate-800/50 rounded-xl p-4 text-center hover:scale-105 transition transform shadow-lg">
-          <h4 class="text-lg sm:text-xl font-bold mb-2">RAW Nutrition | Bum Energy</h4>
+          <h4 class="text-lg sm:text-xl font-bold mb-2">Blackstone Labs</h4>
           <p class="text-gray-300 mb-2">Use code <span class="font-bold red-text">EMERY</span> for 10% off</p>
-          <a href="https://getrawnutrition.com/" class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">Shop Now</a>
+          <a href="https://blackstonelabs.com/" class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">Shop Now</a>
         </div>
         <div class="bg-slate-800/50 rounded-xl p-4 text-center hover:scale-105 transition transform shadow-lg">
           <h4 class="text-lg sm:text-xl font-bold mb-2">Kontrolled Insanity</h4>
