--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <div class="bg-slate-900/60 backdrop-blur-md p-4 sm:p-8 rounded-2xl shadow-lg">
         <h4 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">Current Phase</h4>
         <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-8 items-center text-center">
-          <p class="text-base sm:text-lg md:text-xl">Phase: <span class="font-bold red-text">Cut</span></p>
-          <p class="text-base sm:text-lg md:text-xl">Starting Weight: <span class="font-bold red-text">245 lbs</span></p>
-          <p class="text-base sm:text-lg md:text-xl">Starting Body Fat: <span class="font-bold red-text">23%</span></p>
+          <p class="text-base sm:text-lg md:text-xl">Phase: <span class="font-bold red-text">Maintenance</span></p>
+          <p class="text-base sm:text-lg md:text-xl">Starting Weight: <span class="font-bold red-text">205 lbs</span></p>
+          <p class="text-base sm:text-lg md:text-xl">Starting Body Fat: <span class="font-bold red-text">15%</span></p>
         </div>
       </div>
     </div>
@@ -101,9 +101,9 @@
           <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="50"><h6 class="font-bold mb-1 red-text">Tue</h6><p class="text-gray-200">Pull</p></div>
           <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="100"><h6 class="font-bold mb-1 red-text">Wed</h6><p class="text-gray-200">Legs</p></div>
           <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 text-gray-500 italic" data-aos="fade-up" data-aos-delay="150"><h6 class="font-bold mb-1">Thu</h6><p>Rest</p></div>
-          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="200"><h6 class="font-bold mb-1 red-text">Fri</h6><p class="text-gray-200">Upper</p></div>
-          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="250"><h6 class="font-bold mb-1 red-text">Sat</h6><p class="text-gray-200">Lower</p></div>
-          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 text-gray-500 italic" data-aos="fade-up" data-aos-delay="300"><h6 class="font-bold mb-1">Sun</h6><p>Rest</p></div>
+          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="200"><h6 class="font-bold mb-1 red-text">Fri</h6><p class="text-gray-200">Push</p></div>
+          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="250"><h6 class="font-bold mb-1 red-text">Sat</h6><p class="text-gray-200">Pull</p></div>
+          <div class="bg-slate-800/50 rounded-xl p-2 sm:p-4 hover:scale-105 transition transform shadow-lg" data-aos="fade-up" data-aos-delay="250"><h6 class="font-bold mb-1 red-text">Sat</h6><p class="text-gray-200">Legs</p></div>
         </div>
       </div>
     </div>
@@ -134,36 +134,77 @@
   </section>
 
   <!-- About & Sponsors Section -->
-  <section class="flex flex-col md:flex-row md:justify-center gap-6 md:gap-8 mt-16 mb-20 px-2 sm:px-4">
-    <div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-4 sm:p-8 border border-slate-800/50 shadow-lg flex-1 hover:scale-105 transition transform">
-      <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">About Me</h3>
-      <p class="text-base sm:text-lg mb-4 leading-relaxed text-center">
-        Hey, I'm Emery James Harris - an aspiring bodybuilder sharing my fitness journey on Social Media.
-      </p>
-      <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6 text-sm sm:text-base">
-        <div class="flex items-center justify-center">
-          <i data-feather="map-pin" class="mr-2 red-text"></i>
-          <span>North Carolina, USA</span>
-        </div>
-        <div class="flex items-center justify-center">
-          <i data-feather="calendar" class="mr-2 red-text"></i>
-          <span id="age-display">27</span>
-        </div>
+<section class="flex flex-col md:flex-row md:justify-center items-start gap-6 md:gap-8 mt-16 mb-20 px-2 sm:px-4">
+
+  <!-- About Me -->
+  <div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-6 sm:p-8 border border-slate-800/50 shadow-lg transition transform hover:scale-[1.03] md:max-w-md w-full">
+    <h3 class="text-2xl sm:text-3xl font-bold mb-4 text-center gradient-text">
+      About Me
+    </h3>
+
+    <p class="text-sm sm:text-base text-gray-300 mb-4 leading-relaxed text-center">
+      Hey, I'm Emery James Harris — an aspiring bodybuilder sharing my fitness journey on social media.
+    </p>
+
+    <div class="flex items-center justify-center gap-6 text-sm text-gray-400">
+      <div class="flex items-center gap-2">
+        <i data-feather="map-pin" class="red-text w-4 h-4"></i>
+        <span>North Carolina, USA</span>
+      </div>
+      <div class="flex items-center gap-2">
+        <i data-feather="calendar" class="red-text w-4 h-4"></i>
+        <span id="age-display">27</span>
       </div>
     </div>
-    <div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-4 sm:p-8 border border-slate-800/50 shadow-lg flex-1 hover:scale-105 transition transform">
-      <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">Sponsors</h3>
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <div class="bg-slate-800/50 rounded-xl p-4 text-center hover:scale-105 transition transform shadow-lg">
-          <h4 class="text-lg sm:text-xl font-bold mb-2">Blackstone Labs</h4>
-          <p class="text-gray-300 mb-2">Use code <span class="font-bold red-text">EMERY</span> for 10% off</p>
-          <a href="https://blackstonelabs.com/" class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">Shop Now</a>
-        </div>
-        <div class="bg-slate-800/50 rounded-xl p-4 text-center hover:scale-105 transition transform shadow-lg">
-          <h4 class="text-lg sm:text-xl font-bold mb-2">Kontrolled Insanity</h4>
-          <p class="text-gray-300 mb-2">Use code <span class="font-bold red-text">EMERY</span> for 10% off</p>
-          <a href="https://kontrolledinsanity.com/" class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">Shop Now</a>
-        </div>
+  </div>
+
+  <!-- Sponsors -->
+  <div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-6 sm:p-8 border border-slate-800/50 shadow-lg transition transform hover:scale-[1.03] md:flex-1 w-full">
+    <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">
+      Sponsors
+    </h3>
+
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+    
+    <!-- Blackstone Labs -->
+    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition">
+      <h4 class="text-lg sm:text-xl font-bold mb-2">Blackstone Labs</h4>
+      <p class="text-gray-300 mb-2">
+        Use code <span class="font-bold red-text">EMERY</span> for 10% off
+      </p>
+      <a href="https://blackstonelabs.com/"
+         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+        Shop Now
+      </a>
+    </div>
+
+    <!-- Kontrolled Insanity -->
+    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition">
+      <h4 class="text-lg sm:text-xl font-bold mb-2">Kontrolled Insanity</h4>
+      <p class="text-gray-300 mb-2">
+        Use code <span class="font-bold red-text">EMERY</span> for 10% off
+      </p>
+      <a href="https://kontrolledinsanity.com/"
+         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+        Shop Now
+      </a>
+    </div>
+
+    <!-- Zone Smelling Salts (centered bottom) -->
+    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition sm:col-span-2 sm:max-w-md sm:mx-auto">
+      <h4 class="text-lg sm:text-xl font-bold mb-2">Zone Smelling Salts</h4>
+      <p class="text-gray-300 mb-2">
+        Use code <span class="font-bold red-text">EMERY</span> for 10% off
+      </p>
+      <a href="https://zonesmellingsalts.com/"
+         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+        Shop Now
+      </a>
+    </div>
+
+  </div>
+</div>
       </div>
     </div>
   </section>
@@ -204,7 +245,7 @@ tabs.forEach(tab => {
 // Next Show countdown
 let showName = "TBA"; 
 let showLocation = "TBA"; 
-let showDate = new Date("").getTime();
+let showDate = new Date("November 7, 2026 00:00:00").getTime();
 document.getElementById("show-name").textContent = showName;
 document.getElementById("show-location").textContent = showLocation;
 function updateCountdown() {
