Refactor sponsor section layout and styling

--- a/index.html
+++ b/index.html
@@ -158,50 +158,53 @@
     </div>
   </div>
 
-  <!-- Sponsors -->
-  <div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-6 sm:p-8 border border-slate-800/50 shadow-lg transition transform hover:scale-[1.03] md:flex-1 w-full">
-    <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">
-      Sponsors
-    </h3>
+<!-- Sponsors -->
+<div class="bg-slate-900/60 backdrop-blur-md rounded-2xl p-6 sm:p-8 border border-slate-800/50 shadow-lg transition transform hover:scale-[1.03] md:flex-1 w-full">
+  <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">
+    Sponsors
+  </h3>
 
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-    
     <!-- Blackstone Labs -->
-    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition">
+    <div class="bg-slate-800/50 rounded-xl p-6 text-center shadow-lg hover:scale-105 transition min-h-[170px] flex flex-col justify-center">
       <h4 class="text-lg sm:text-xl font-bold mb-2">Blackstone Labs</h4>
-      <p class="text-gray-300 mb-2">
+      <p class="text-gray-300 mb-4">
         Use code <span class="font-bold red-text">EMERY</span> for 10% off
       </p>
       <a href="https://blackstonelabs.com/"
-         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+         class="inline-block bg-red-600 text-white px-4 py-1.5 rounded-lg hover:bg-red-700 transition">
         Shop Now
       </a>
     </div>
 
     <!-- Kontrolled Insanity -->
-    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition">
-      <h4 class="text-lg sm:text-xl font-bold mb-2">Kontrolled Insanity</h4>
-      <p class="text-gray-300 mb-2">
+    <div class="bg-slate-800/50 rounded-xl p-6 text-center shadow-lg hover:scale-105 transition min-h-[170px] flex flex-col justify-center">
+      <h4 class="text-lg sm:text-xl font-bold mb-2">Zone Smelling Salts</h4>
+      <p class="text-gray-300 mb-4">
         Use code <span class="font-bold red-text">EMERY</span> for 10% off
       </p>
-      <a href="https://kontrolledinsanity.com/"
-         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+      <a href="https://zonesmellingsalts.com/"
+         class="inline-block bg-red-600 text-white px-4 py-1.5 rounded-lg hover:bg-red-700 transition">
         Shop Now
       </a>
     </div>
 
-    <!-- Zone Smelling Salts (centered bottom) -->
-    <div class="bg-slate-800/50 rounded-xl p-4 text-center shadow-lg hover:scale-105 transition sm:col-span-2 sm:max-w-md sm:mx-auto">
-      <h4 class="text-lg sm:text-xl font-bold mb-2">Zone Smelling Salts</h4>
-      <p class="text-gray-300 mb-2">
+    <!-- Zone Smelling Salts -->
+    <div class="bg-slate-800/50 rounded-xl p-6 text-center shadow-lg hover:scale-105 transition min-h-[170px] flex flex-col justify-center sm:col-span-2">
+      <h4 class="text-lg sm:text-xl font-bold mb-2">Kontrolled Insanity</h4>
+      <p class="text-gray-300 mb-4">
         Use code <span class="font-bold red-text">EMERY</span> for 10% off
       </p>
-      <a href="https://zonesmellingsalts.com/"
-         class="inline-block bg-red-600 text-white px-3 py-1 rounded-lg hover:bg-red-700 transition">
+      <a href="https://kontrolledinsanity.com/"
+         class="inline-block bg-red-600 text-white px-4 py-1.5 rounded-lg hover:bg-red-700 transition">
         Shop Now
       </a>
     </div>
+
+  </div>
+</div>
+
 
   </div>
 </div>
