Update footer to link to Mo's YouTube channel

--- a/index.html
+++ b/index.html
@@ -217,7 +217,13 @@
   <div class="flex justify-center items-center mb-2">
     <span>Made with</span>
     <img src="https://twemoji.maxcdn.com/v/14.0.2/svg/2764.svg" alt="❤" class="w-4 h-4 mx-1">
-    <span>by Mo</span>
+    <a
+      href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+      target="_blank"
+      class="hover:text-red-500 transition font-medium"
+    >
+      Mo
+    </a>
   </div>
   <p>© Copyright 2025</p>
 </footer>
