--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Emery</title>
-  <link rel="icon" type="image/x-icon" src="emerypfp.jpeg" />
+  <link rel="icon" type="image/x-icon" href="emerypfp.jpeg" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -86,7 +86,7 @@
     <!-- Hero -->
     <section class="flex flex-col items-center justify-center text-center py-20 sm:py-32 min-h-screen" data-aos="fade-up">
       <img
-        src="emery.jpeg"
+        src="emerypfp.jpeg"
         alt="Emery"
         class="w-28 h-28 sm:w-32 sm:h-32 mb-8 rounded-full border-4 border-red-500/40 shadow-xl hover:scale-110 transition-transform duration-300"
       />
@@ -107,7 +107,7 @@
             <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
           </svg>
         </a>
-        <a href="https://www.youtube.com/" class="social-icon bg-red-600/70 hover:bg-red-700 p-4 rounded-full">
+        <a href="https://www.youtube.com/@emeryjharris" class="social-icon bg-red-600/70 hover:bg-red-700 p-4 rounded-full">
           <i data-feather="youtube" class="w-6 h-6"></i>
         </a>
       </div>
@@ -203,9 +203,9 @@
       </div>
     </section>
 
-    <!-- About + Sponsors – cards now have independent height -->
+    <!-- About + Sponsors -->
     <section class="grid md:grid-cols-2 gap-6 lg:gap-8 py-16 md:py-20 items-start">
-      <!-- About Me – compact & short -->
+      <!-- About Me -->
       <div class="section-card p-6 sm:p-8 flex flex-col items-center text-center">
         <h3 class="text-2xl sm:text-3xl font-bold mb-4 gradient-text">About Me</h3>
         <p class="text-gray-300 text-base sm:text-lg leading-relaxed mb-5 max-w-md">
@@ -223,7 +223,7 @@
         </div>
       </div>
 
-      <!-- Sponsors – can be taller, no problem -->
+      <!-- Sponsors -->
       <div class="section-card p-6 sm:p-8">
         <h3 class="text-2xl sm:text-3xl font-bold mb-6 text-center gradient-text">Sponsors</h3>
         <div class="grid sm:grid-cols-2 gap-5">
@@ -273,7 +273,7 @@
     AOS.init({ duration: 800, once: true });
     feather.replace();
 
-    // Age
+    // Age calculation
     const birth = new Date(1998, 4, 15);
     const now = new Date();
     let age = now.getFullYear() - birth.getFullYear();
