--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div id="show" class="tab-content hidden section-card p-6 sm:p-10 text-center">
         <h4 class="text-2xl sm:text-3xl font-bold mb-8 gradient-text">Next Bodybuilding Show</h4>
         <p class="text-xl mb-4">Show: <span id="show-name" class="font-bold">NPC Elite Muscle Classic</span></p>
-        <p class="text-lg mb-8">Location: <span id="show-location" class="font-bold">Carnegie, PA</span></p>
+        <p class="text-lg mb-8">Location: <span id="show-location" class="font-bold">Greensboro, NC</span></p>
 
         <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 max-w-3xl mx-auto">
           <div class="bg-slate-800/40 rounded-xl p-5"><div id="days" class="text-3xl font-bold red-text">- -</div><div>Days</div></div>
