Change show title from 'Next' to 'First'

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
 
       <div id="show" class="tab-content hidden section-card p-6 sm:p-10 text-center">
-        <h4 class="text-2xl sm:text-3xl font-bold mb-8 gradient-text">Next Bodybuilding Show</h4>
+        <h4 class="text-2xl sm:text-3xl font-bold mb-8 gradient-text">First Bodybuilding Show</h4>
         <p class="text-xl mb-4">Show: <span id="show-name" class="font-bold">NPC Elite Muscle Classic</span></p>
         <p class="text-lg mb-8">Location: <span id="show-location" class="font-bold">Greensboro, NC</span></p>
 
